objects/Opportunity/fields/Kontaktniosoba__c.field-meta.xml
<CustomField>
    <fullName>Kontaktniosoba__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Kontaktní osoba</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Příležitosti</relationshipLabel>
    <relationshipName>Prilezitosti</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>