objects/Opportunity/fields/Planovanytermin_dokonceni__c.field-meta.xml
<CustomField>
    <fullName>Planovanytermin_dokonceni__c</fullName>
    <label>Plánovaný termín dokončení</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>