objects/Opportunity/fields/Pracovnik__c.field-meta.xml
<CustomField>
    <fullName>Pracovnik__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account manager</label>
    <referenceTo>Pracovnik__c</referenceTo>
    <relationshipLabel>Příležitosti</relationshipLabel>
    <relationshipName>Pracovnici</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>