objects/Opportunity/fields/Programy__c.field-meta.xml
<CustomField>
    <fullName>Programy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Příležitosti</relationshipLabel>
    <relationshipName>Prilezitost</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>