objects/Opportunity/listViews/P_le_itosti_SB.listView-meta.xml
<ListView>
    <fullName>P_le_itosti_SB</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Programy__c</field>
        <operation>contains</operation>
        <value>Sázíme budoucnost</value>
    </filters>
    <label>Příležitosti SB</label>
</ListView>