objects/Opportunity/listViews/Vsechny_prilezitosti.listView-meta.xml
<ListView>
    <fullName>Vsechny_prilezitosti</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Kontaktniosoba__c</columns>
    <columns>Pracovnik__c</columns>
    <filterScope>Everything</filterScope>
    <label>Všechny příležitosti</label>
</ListView>